@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, 2023 Contributors to the Eclipse Foundation
+ * Copyright (c) 2022, 2024 Contributors to the Eclipse Foundation
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -24,7 +24,6 @@ import com.sun.enterprise.admin.util.CommandModelData.ParamModelData;
 import com.sun.enterprise.admin.util.HttpConnectorAddress;
 import com.sun.enterprise.admin.util.cache.AdminCacheUtils;
 import com.sun.enterprise.config.serverbeans.SecureAdmin;
-import com.sun.enterprise.universal.GFBase64Encoder;
 import com.sun.enterprise.universal.i18n.LocalStringsImpl;
 import com.sun.enterprise.universal.io.SmartFile;
 import com.sun.enterprise.util.io.FileUtils;
@@ -37,8 +36,6 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.io.PrintStream;
-import java.io.UnsupportedEncodingException;
 import java.net.ConnectException;
 import java.net.HttpURLConnection;
 import java.net.InetAddress;
@@ -50,14 +47,15 @@ import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLEncoder;
 import java.net.UnknownHostException;
+import java.nio.charset.Charset;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Properties;
-import java.util.logging.Level;
 import java.util.logging.Logger;
 
 import javax.net.ssl.SSLException;
@@ -76,12 +74,19 @@ import org.glassfish.api.admin.CommandValidationException;
 import org.glassfish.api.admin.InvalidCommandException;
 import org.glassfish.api.admin.ParameterMap;
 import org.glassfish.api.admin.Payload;
+import org.glassfish.common.util.HttpParser;
 import org.glassfish.common.util.admin.AuthTokenManager;
 import org.w3c.dom.Document;
 import org.w3c.dom.NamedNodeMap;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 import org.xml.sax.SAXException;
+
+import static java.nio.charset.StandardCharsets.UTF_8;
+import static java.util.logging.Level.FINER;
+import static java.util.logging.Level.FINEST;
+import static java.util.logging.Level.SEVERE;
+import static java.util.logging.Level.WARNING;
 
 /**
  * Utility class for executing remote admin commands. Each instance of RemoteAdminCommand represents a particular remote
@@ -336,19 +341,19 @@ public class RemoteAdminCommand {
                         this.usage = ccm.getUsage();
                         addedUploadOption = ccm.isAddedUploadOption();
                     }
-                    if (logger.isLoggable(Level.FINEST)) {
-                        logger.log(Level.FINEST,
+                    if (logger.isLoggable(FINEST)) {
+                        logger.log(FINEST,
                                 "Command model for command {0} was successfully loaded from the cache. [Duration: {1} nanos]",
                                 new Object[] { name, System.nanoTime() - startNanos });
                     }
                 } else {
-                    if (logger.isLoggable(Level.FINEST)) {
-                        logger.log(Level.FINEST, "Command model for command {0} is not in cache. It must be fatched from server.", name);
+                    if (logger.isLoggable(FINEST)) {
+                        logger.log(FINEST, "Command model for command {0} is not in cache. It must be fatched from server.", name);
                     }
                 }
             } catch (Exception ex) {
-                if (logger.isLoggable(Level.FINEST)) {
-                    logger.log(Level.FINEST, "Can not get data from cache under key " + createCommandCacheKey(), ex);
+                if (logger.isLoggable(FINEST)) {
+                    logger.log(FINEST, "Can not get data from cache under key " + createCommandCacheKey(), ex);
                 }
             }
         }
@@ -570,12 +575,15 @@ public class RemoteAdminCommand {
                     throw new IOException(strings.get("NoPayloadSupport", responseContentType));
                 }
                 PayloadFilesManager downloadedFilesMgr = new PayloadFilesManager.Perm(fileOutputDir, null, logger,
-                        new PayloadFilesManager.ActionReportHandler() {
-                            @Override
-                            public void handleReport(InputStream reportStream) throws Exception {
-                                handleResponse(options, reportStream, urlConnection.getResponseCode(), userOut);
-                            }
-                        });
+                    new PayloadFilesManager.ActionReportHandler() {
+
+                        @Override
+                        public void handleReport(InputStream reportStream) throws Exception {
+                            int responseCode = urlConnection.getResponseCode();
+                            Charset charset = HttpParser.getCharsetFromHeader(responseContentType);
+                            handleResponse(options, reportStream, charset, responseCode, userOut);
+                        }
+                    });
                 try {
                     downloadedFilesMgr.processParts(inboundPayload);
                 } catch (CommandException cex) {
@@ -651,12 +659,12 @@ public class RemoteAdminCommand {
              */
             shouldTryCommandAgain = false;
             try {
-                if (logger.isLoggable(Level.FINER)) {
-                    logger.log(Level.FINER, "URI: {0}", uriString);
-                    logger.log(Level.FINER, "URL: {0}", url.toString());
-                    logger.log(Level.FINER, "URL: {0}", url.toURL(uriString).toString());
-                    logger.log(Level.FINER, "Password options: {0}", passwordOptions);
-                    logger.log(Level.FINER, "Using auth info: User: {0}, Password: {1}",
+                if (logger.isLoggable(FINER)) {
+                    logger.log(FINER, "URI: {0}", uriString);
+                    logger.log(FINER, "URL: {0}", url.toString());
+                    logger.log(FINER, "URL: {0}", url.toURL(uriString).toString());
+                    logger.log(FINER, "Password options: {0}", passwordOptions);
+                    logger.log(FINER, "Using auth info: User: {0}, Password: {1}",
                             new Object[] { user, (password != null && password.length > 0) ? "<non-null>" : "<null>" });
                 }
                 final AuthenticationInfo authInfo = authenticationInfo();
@@ -679,8 +687,8 @@ public class RemoteAdminCommand {
                 }
                 if (commandModel != null && isCommandModelFromCache() && commandModel instanceof CachedCommandModel) {
                     urlConnection.setRequestProperty(COMMAND_MODEL_MATCH_HEADER, ((CachedCommandModel) commandModel).getETag());
-                    if (logger.isLoggable(Level.FINER)) {
-                        logger.log(Level.FINER, "CommandModel ETag: {0}", ((CachedCommandModel) commandModel).getETag());
+                    if (logger.isLoggable(FINER)) {
+                        logger.log(FINER, "CommandModel ETag: {0}", ((CachedCommandModel) commandModel).getETag());
                     }
                 }
                 urlConnection.setRequestMethod(httpMethod);
@@ -704,7 +712,7 @@ public class RemoteAdminCommand {
                      * Log at FINER; at FINE it would appear routinely when used from
                      * asadmin.
                      */
-                    logger.log(Level.FINER, "Following redirection to " + redirection);
+                    logger.log(FINER, "Following redirection to " + redirection);
                     url = followRedirection(url, redirection);
                     shouldTryCommandAgain = true;
                     /*
@@ -734,7 +742,7 @@ public class RemoteAdminCommand {
                 logger.finer("doHttpCommand succeeds");
             } catch (AuthenticationException authEx) {
 
-                logger.log(Level.FINER, "DAS has challenged for credentials");
+                logger.log(FINER, "DAS has challenged for credentials");
 
                 /*
                  * The DAS has challenged us to provide valid credentials.
@@ -744,7 +752,7 @@ public class RemoteAdminCommand {
                  * retry using the caller provided credentials (if there are any).
                  */
                 if (!usedCallerProvidedCredentials) {
-                    logger.log(Level.FINER, "Have not tried caller-supplied credentials yet; will do that next");
+                    logger.log(FINER, "Have not tried caller-supplied credentials yet; will do that next");
                     usedCallerProvidedCredentials = true;
                     shouldTryCommandAgain = true;
                     continue;
@@ -753,32 +761,32 @@ public class RemoteAdminCommand {
                  * We already tried the caller-provided credentials.  Try to
                  * update the credentials if we haven't already done so.
                  */
-                logger.log(Level.FINER, "Already used caller-supplied credentials");
+                logger.log(FINER, "Already used caller-supplied credentials");
                 if (askedUserForCredentials) {
                     /*
                      * We already updated the credentials once, and the updated
                      * ones did not work.  No recourse.
                      */
-                    logger.log(Level.FINER, "Already tried with updated credentials; cannot authenticate");
+                    logger.log(FINER, "Already tried with updated credentials; cannot authenticate");
                     throw authEx;
                 }
 
                 /*
                  * Try to update the creds.
                  */
-                logger.log(Level.FINER, "Have not yet tried to update credentials, so will try to update them");
+                logger.log(FINER, "Have not yet tried to update credentials, so will try to update them");
                 if (!updateAuthentication()) {
                     /*
                      * No updated credentials are avaiable, so we
                      * have no more options.
                      */
-                    logger.log(Level.FINER, "Could not update credentials; cannot authenticate");
+                    logger.log(FINER, "Could not update credentials; cannot authenticate");
                     throw authEx;
                 }
                 /*
                  * We have another set of credentials we can try.
                  */
-                logger.log(Level.FINER, "Was able to update the credentials so will retry with the updated ones");
+                logger.log(FINER, "Was able to update the credentials so will retry with the updated ones");
                 askedUserForCredentials = true;
                 shouldTryCommandAgain = true;
                 continue;
@@ -796,34 +804,13 @@ public class RemoteAdminCommand {
                 throw new CommandException(msg, he);
             } catch (SocketException se) {
                 logger.finer("doHttpCommand: socket exception " + se);
-                try {
-                    boolean serverAppearsSecure = NetUtils.isSecurePort(host, port);
-                    if (serverAppearsSecure && !shouldUseSecure) {
-                        if (retryUsingSecureConnection(host, port)) {
-                            // retry using secure connection
-                            shouldUseSecure = true;
-                            usedCallerProvidedCredentials = true;
-                            shouldTryCommandAgain = true;
-                            continue;
-                        }
-                    }
-                    throw new CommandException(se);
-                } catch (IOException io) {
-                    // XXX - logger.printExceptionStackTrace(io);
-                    throw new CommandException(io);
-                }
+                throw new CommandException(se);
             } catch (SSLException se) {
                 logger.finer("doHttpCommand: SSL exception " + se);
-                try {
-                    boolean serverAppearsSecure = NetUtils.isSecurePort(host, port);
-                    if (!serverAppearsSecure && secure) {
-                        logger.log(Level.SEVERE, AdminLoggerInfo.mServerIsNotSecure, new Object[] { host, port });
-                    }
-                    throw new CommandException(se);
-                } catch (IOException io) {
-                    // XXX - logger.printExceptionStackTrace(io);
-                    throw new CommandException(io);
+                if (secure) {
+                    logger.log(SEVERE, AdminLoggerInfo.mServerIsNotSecure, new Object[] { host, port });
                 }
+                throw new CommandException(se);
             } catch (SocketTimeoutException e) {
                 logger.finer("doHttpCommand: read timeout " + e);
                 throw new CommandException(strings.get("ReadTimeout", (float) readTimeout / 1000), e);
@@ -833,11 +820,7 @@ public class RemoteAdminCommand {
             } catch (CommandException e) {
                 throw e;
             } catch (Exception e) {
-                // logger.log(Level.FINER, "doHttpCommand: exception", e);
-                logger.finer("doHttpCommand: exception " + e);
-                ByteArrayOutputStream buf = new ByteArrayOutputStream();
-                e.printStackTrace(new PrintStream(buf));
-                logger.finer(buf.toString());
+                logger.log(FINER, "Something went wrong: " + e.getMessage(), e);
                 throw new CommandException(e);
             }
         } while (shouldTryCommandAgain);
@@ -908,7 +891,7 @@ public class RemoteAdminCommand {
          */
     }
 
-    /*
+    /**
      * Returns the username/password authenticaiton information to use
      * in building the outbound HTTP connection.
      *
@@ -923,8 +906,8 @@ public class RemoteAdminCommand {
      */
     private String checkConnect(HttpURLConnection urlConnection) throws IOException, CommandException {
         int code = urlConnection.getResponseCode();
-        if (logger.isLoggable(Level.FINER)) {
-            logger.log(Level.FINER, "Response code: " + code);
+        if (logger.isLoggable(FINER)) {
+            logger.log(FINER, "Response code: " + code);
         }
         if (code == -1) {
             URL url = urlConnection.getURL();
@@ -978,27 +961,24 @@ public class RemoteAdminCommand {
      * @return the URI so far, including the newly-added option
      */
     private StringBuilder addStringOption(StringBuilder uriString, String name, String option) {
-        try {
-            String encodedOption = URLEncoder.encode(option, "UTF-8");
-            uriString.append(name).append('=').append(encodedOption).append(QUERY_STRING_SEPARATOR);
-        } catch (UnsupportedEncodingException e) {
-            // XXX - should never happen
-            throw new RuntimeException("Error encoding value for: " + name + ", value:" + option, e);
-        }
+        String encodedOption = URLEncoder.encode(option, UTF_8);
+        uriString.append(name).append('=').append(encodedOption).append(QUERY_STRING_SEPARATOR);
         return uriString;
     }
 
     /**
      * Add a password option, passing it as a header in the request
+     *
+     * @deprecated insecure!!!
      */
+    @Deprecated
     private StringBuilder addPasswordOption(StringBuilder uriString, String name, String option) throws IOException {
         if (passwordOptions == null) {
             passwordOptions = new StringBuilder();
         } else {
             passwordOptions.append(QUERY_STRING_SEPARATOR);
         }
-        GFBase64Encoder encoder = new GFBase64Encoder();
-        passwordOptions.append(name).append('=').append(URLEncoder.encode(encoder.encode(option.getBytes()), "UTF-8"));
+        passwordOptions.append(name).append('=').append(Base64.getUrlEncoder().encodeToString(option.getBytes(UTF_8)));
         return uriString;
     }
 
@@ -1056,19 +1036,19 @@ public class RemoteAdminCommand {
         }
     }
 
-    private void handleResponse(ParameterMap params, InputStream in, int code, OutputStream out) throws IOException, CommandException {
+    private void handleResponse(ParameterMap params, InputStream in, Charset charset, int code, OutputStream out) throws IOException, CommandException {
         if (out == null) {
-            handleResponse(params, in, code);
+            handleResponse(params, in, charset, code);
         } else {
             FileUtils.copy(in, out);
         }
     }
 
-    private void handleResponse(ParameterMap params, InputStream in, int code) throws IOException, CommandException {
+    private void handleResponse(ParameterMap params, InputStream in, Charset charset, int code) throws IOException, CommandException {
         RemoteResponseManager rrm = null;
 
         try {
-            rrm = new RemoteResponseManager(in, code, logger);
+            rrm = new RemoteResponseManager(in, charset, code, logger);
             rrm.process();
         } catch (RemoteSuccessException rse) {
             // save results
@@ -1130,7 +1110,8 @@ public class RemoteAdminCommand {
                         partIt.next(); // just throw it away
                     } else {
                         metadataErrors = new StringBuilder();
-                        commandModel = parseMetadata(partIt.next().getInputStream(), metadataErrors);
+                        Charset charset = HttpParser.getCharsetFromHeader(responseContentType);
+                        commandModel = parseMetadata(partIt.next().getInputStream(), charset, metadataErrors);
                         logger.finer("fetchCommandModel: got command opts: " + commandModel);
                         isReportProcessed = true;
                     }
@@ -1145,16 +1126,16 @@ public class RemoteAdminCommand {
             throw new InvalidCommandException(metadataErrors.toString());
         }
         this.commandModelFromCache = false;
-        if (logger.isLoggable(Level.FINEST)) {
-            logger.log(Level.FINEST, "Command model for {0} command fetched from remote server. [Duration: {1} nanos]",
+        if (logger.isLoggable(FINEST)) {
+            logger.log(FINEST, "Command model for {0} command fetched from remote server. [Duration: {1} nanos]",
                     new Object[] { name, System.nanoTime() - startNanos });
         }
         //if (!omitCache) {
         try {
             AdminCacheUtils.getCache().put(createCommandCacheKey(), commandModel);
         } catch (Exception ex) {
-            if (logger.isLoggable(Level.WARNING)) {
-                logger.log(Level.WARNING, AdminLoggerInfo.mCantPutToCache, createCommandCacheKey());
+            if (logger.isLoggable(WARNING)) {
+                logger.log(WARNING, AdminLoggerInfo.mCantPutToCache, createCommandCacheKey());
             }
         }
         //}
@@ -1186,15 +1167,16 @@ public class RemoteAdminCommand {
      * Parse the XML metadata for the command on the input stream.
      *
      * @param in the input stream
+     * @param charset
      * @return the set of ValidOptions
      */
-    private CommandModel parseMetadata(InputStream in, StringBuilder errors) {
-        if (logger.isLoggable(Level.FINER)) {
+    private CommandModel parseMetadata(InputStream in, Charset charset, StringBuilder errors) {
+        if (logger.isLoggable(FINER)) {
             try {
                 ByteArrayOutputStream baos = new ByteArrayOutputStream();
                 FileUtils.copy(in, baos);
                 in = new ByteArrayInputStream(baos.toByteArray());
-                String response = baos.toString();
+                String response = baos.toString(charset);
                 logger.finer("------- RAW METADATA RESPONSE ---------");
                 logger.finer(response);
                 logger.finer("------- RAW METADATA RESPONSE ---------");
